# WarframeTradeCLI

./: .gitignore  CMakeLists.txt  README.md  flake.nix
cmake/: echoArgs.h
include/cli/: parser.h
include/core/: market_api.h
include/tui/: parser.h  tui.h
include/util/: printJson.h
src/: main.cpp
src/cli/: main.cpp  parser.cpp
src/core/: market_api.cpp
src/tui/: parser.cpp  tui.cpp
src/util/: echoArgs.cpp  printJson.cpp
